# django_test_project

./: .gitignore  Dockerfile  docker-compose-jmeter.yml  docker-compose.yml  docker-stack.yml  prometheus.yml  pyproject.toml
jmeter/: results.jtl  test_plan.jmx
nginx/: nginx.conf
promtail/config/: promtail-config.yaml
src/core/: settings.py  urls.py
src/web/: admin.py
src/web/migrations/: 0001_initial.py  0002_cat.py
src/web/models/: __init__.py  cat.py  dog.py
